<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_prueba_1"
    tools:context=".AuthActivity">

    <Button
        android:id="@+id/sing_up_btn"
        android:layout_width="331dp"
        android:layout_height="50dp"
        android:background="@drawable/txt_blanco"
        android:text="@string/signup"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_btn"
        app:layout_constraintVertical_bias="0.294" />

    <EditText
        android:id="@+id/signup_password_first_edt"
        android:layout_width="331dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/txt_blanco"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_password"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#B3B1B1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_email_edt" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046"
        app:srcCompat="@drawable/logo1" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="210dp"
        android:layout_height="133dp"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_email_edt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.678"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/sign_up_email_edt"
        android:layout_width="331dp"
        android:layout_height="50dp"
        android:layout_marginTop="304dp"
        android:background="@drawable/txt_blanco"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_email"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#B3B1B1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sign_in_btn"
        android:layout_width="331dp"
        android:layout_height="50dp"
        android:background="@drawable/txt_blanco"
        android:text="@string/sign_in"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27"
        app:layout_constraintVertical_bias="0.181" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_password_first_edt"
        app:layout_constraintVertical_bias="0.152" />

</androidx.constraintlayout.widget.ConstraintLayout>