<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo_prueba_1"
        tools:context=".AuthActivity">

        <EditText
            android:id="@+id/signup_password_second_edt"
            android:importantForAutofill="no"
            android:layout_width="331dp"
            android:layout_height="50dp"
            android:background="@drawable/txt_blanco"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/confirm_password"
            android:inputType="textPersonName"
            android:textColor="#B3B1B1"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.631" />

        <Button
            android:id="@+id/i_already_have_account_btn"
            android:layout_width="331dp"
            android:layout_height="50dp"
            android:background="@drawable/txt_blanco"
            android:text="@string/i_already_have_an_account"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.955" />

        <EditText
            android:id="@+id/sign_in_password_edt"
            android:importantForAutofill="no"
            android:layout_width="331dp"
            android:layout_height="50dp"
            android:background="@drawable/txt_blanco"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/enter_password"
            android:inputType="textPersonName"
            android:textColor="#B3B1B1"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.543" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="250dp"
            android:layout_height="70dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.566"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.046"
            app:srcCompat="@drawable/logo1" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="210dp"
            android:layout_height="133dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.199"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/signInEmailEdt"
            android:importantForAutofill="no"
            android:layout_width="331dp"
            android:layout_height="50dp"
            android:background="@drawable/txt_blanco"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:hint="@string/enter_email"
            android:textColor="#B3B1B1"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.454" />

        <Button
            android:id="@+id/signupBtn"
            android:layout_width="331dp"
            android:layout_height="50dp"
            android:background="@drawable/txt_blanco"
            android:text="@string/signup"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.729" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>